add-users-model_and_delet-dsstore
add-users-model
delete-DS.store

--- a/.gitignore
+++ b/.gitignore
@@ -20,3 +20,6 @@ public/uploads
 # コミットしたくないファイル、ディレクトリを指定できる設定ファイル
 # 画像が保存される、public/udatesディエクトリをここに追加
 public/udates/*
+
+#DS_Storeを除外
+.DS_Store
